--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <h4 class="card-title">e-Portfolio Labs</h4>
                         <p class="card-text">Location: B121, B123, MB57, C447</p>
 						<p class="card-text">These labs are technology labs where students can get e-Portfolio as well as all kinds of technology help. </p>
-						<p class="card-text">Websites:</p>
-                        <p class="card-text"><small class="text-muted">Websites: </small></p>
+						<p class="card-text"><small class ="text-muted">Websites:<a href = https://www.laguardia.edu/Current-Students/ePortfolio-Studio/>https://www.laguardia.edu/Current-Students/ePortfolio-Studio/</a></small></p>
+                        <p class="card-text"><small class="text-muted">Websites:<a href =https://eportfolio.laguardia.edu/>https://eportfolio.laguardia.edu/</a> </small></p>
                     </div>
                 </div>
             </div>
@@ -69,16 +69,21 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3">
+			 <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">ASAP</h4>
-                        <p class="card-text"> Location:BA22 </p>
-						<p class="card-text"> Email: ASAP@lagcc.cuny.edu </p>
-                        <p class="card-text"><small class="text-muted">Website:<a href=https://www.laguardia.edu/ASAP/ >https://www.laguardia.edu/ASAP/ </a></small></p>
+                        <h4 class="card-title">Financial Aid Office</h4>
+                        <p class="card-text">Location:C107</p>
+						<p class="card-text">Office Hours:Monday & Thursday: 9 a.m.- 7 p.m. <br>Tuesday & Wednesday: 9 a.m.- 5 p.m. <br>Friday: 10 a.m.–3 p.m.<br> 
+                         Saturday & Sunday: Closed</p>
+						 <p class="card-text">Phone: 718-482-7218 </p>
+						 <p class="card-text">Email: financialaid@lagcc.cuny.edu</p>
+						 <p class="card-text">Location: C107</p>
+                        <p class="card-text"><small class="text-muted">Website:<a href= https://www.laguardia.edu/PayingforCollege/ > https://www.laguardia.edu/PayingforCollege/ </a></small></p>
                     </div>
                 </div>
             </div>
+            
             <br><br><br>
             <div class="col-sm-3">
                 <div class="card">
@@ -136,20 +141,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3">
+			 <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Financial Aid Office</h4>
-                        <p class="card-text">Location:C107</p>
-						<p class="card-text">Office Hours:Monday & Thursday: 9 a.m.- 7 p.m. <br>Tuesday & Wednesday: 9 a.m.- 5 p.m. <br>Friday: 10 a.m.–3 p.m.<br> 
-                         Saturday & Sunday: Closed</p>
-						 <p class="card-text">Phone: 718-482-7218 </p>
-						 <p class="card-text">Email: financialaid@lagcc.cuny.edu</p>
-						 <p class="card-text">Location: C107</p>
-                        <p class="card-text"><small class="text-muted">Website:<a href= https://www.laguardia.edu/PayingforCollege/ > https://www.laguardia.edu/PayingforCollege/ </a></small></p>
+                        <h4 class="card-title">ASAP</h4>
+                        <p class="card-text"> Location:BA22 </p>
+						<p class="card-text"> Email: ASAP@lagcc.cuny.edu </p>
+                        <p class="card-text"><small class="text-muted">Website:<a href=https://www.laguardia.edu/ASAP/ >https://www.laguardia.edu/ASAP/ </a></small></p>
                     </div>
                 </div>
             </div>
+
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
@@ -164,9 +166,11 @@
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Office of International Student Services</h4>
+                        <p class="card-text"> Location: B117</p>
+                        <p class="card-text"><small class="text-muted">Phone: 718-482-5145 </small></p>
+						<p class="card-text"><small class="text-muted">Email: fsinformation@lagcc.cuny.edu </small></p>
+						<p class="card-text"><small class="text-muted">Website: <a href = https://www.laguardia.edu/Student-Services/International-Student/International-Students/> https://www.laguardia.edu/Student-Services/International-Student/International-Students/</a></small></p>
                     </div>
                 </div>
             </div>
@@ -174,9 +178,11 @@
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Advising Center</h4>
+						<p class ="card-text"> Office Hours: Monday - Friday 9:00 a.m. – 5:00 p.m.</p> 
+                        <p class="card-text">Phone: (718) 482-5355 </p>
+                        <p class="card-text"><small class="text-muted">Email: aceadvisement@lagcc.cuny.edu </small></p>
+						<p class="card-text"><small class="text-muted">Website:<a href = https://www.laguardia.edu/ce/pages/support-services/advisement-center/> https://www.laguardia.edu/ce/pages/support-services/advisement-center/</a></small></p>
                     </div>
                 </div>
             </div>
@@ -184,9 +190,9 @@
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Veteran Services Resource Center </h4>
+                        <p class="card-text">Location:C371<p>
+                        <p class="card-text"><small class="text-muted">Website: <a href = veteransresourcecenter@lagcc.cuny.edu> veteransresourcecenter@lagcc.cuny.edu</a></small></p>
                     </div>
                 </div>
             </div>
