--- a/collaborators.html
+++ b/collaborators.html
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">HOME<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="schedule.html">Schedule</a>
+        <a class="nav-link" href="schedule.html">eP LABS SCHEDULE</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="collaborators.html">Collaborators</a>
+        <a class="nav-link" href="collaborators.html">COLLABORATORS</a>
       </li>
       </ul>
   </div>
