Design added a different approach for cards

--- a/schedule.html
+++ b/schedule.html
@@ -19,28 +19,29 @@
     <title>Welcome! </title>
 
   </head>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3e3e3;">
-    <a class="navbar-brand" href="#">STM</a>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:'#FFFFFF'" >
+    <a class="navbar-brand" href="https://www.laguardia.edu/stm/"><img style="width: 70px; height: 60px;" src="src/stm.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">HOME <span class ="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">OFICCES<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="schedule.html">eP LABS SCHEDULE</a>
+        <a class="nav-link" href="schedule.html">EP LABS SCHEDULE</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="collaborators.html">COLLABORATORS</a>
       </li>
       </ul>
   </div>
+  <a class="navbar-brand" href="https://www.laguardia.edu"><img style="width: 70px; height: 80px;" src="src/lagcc.png"></a>
   </nav>
 
   <body>
-    <div class="container-fluid" id="background-cl">
+    <div class="container-fluid">
       <div class="container">
         <br><br>
         <div class="">
@@ -231,4 +232,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+      <footer>LaGuardia STM Scavenger HUNT &copy 2019</footer>
 </html>
