--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
     <!-- Career Center -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
+            <h4>Career Center</h4>
+            <p><b>Location:</b> B114</p>
               <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+              Mon & Thur 9:00 to 7:00<br>Tue, Wed & Fri 9:00 to 5:00  <br>
+            <b>Phone: </b> 718-486-5235 <br>
+            <b>Email: </b>career@lagcc.cuny.edu<br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/careerservices/ > Career Center </a></li>
               </ul>
               </p>
         </div>
