commit new -arjina
just add information in new index.

--- a/index.html
+++ b/index.html
@@ -108,15 +108,13 @@
     <!-- Student clubs and organization -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
+            <h4>Student clubs and organization</h4>
+            <p><b>Location:</b> M115</p>
               <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+              Monday–Thursday: 9 a.m.–7 p.m. <br>Friday: 9 a.m.–5 p.m.<br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/student-clubs/ > Student clubs and organization </a></li>
               </ul>
               </p>
         </div>
@@ -124,15 +122,13 @@
     <!-- Student with disabilities -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
-              <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+            <h4>Office of Student with Disabilities</h4>
+            <p><b>Location:</b> M102</p>   
+            <b>Phone: </b> 718-482-5279<br>
+            <b>Email: </b>OSD@lagcc.cuny.edu<br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/osd/ > Office of Student with Disabilities </a></li>
               </ul>
               </p>
         </div>
@@ -140,15 +136,12 @@
     <!-- Cuny Edge -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
-              <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+            <h4>CUNY Edge (AKA) COPE</h4>
+            <p><b>Location:</b> MB13</p>
+            <b>Phone: </b> 718-482-5479 <br> 
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/Academics/CUNY-EDGE/ > CUNY Edge (AKA) COPE </a></li>
               </ul>
               </p>
         </div>
@@ -156,15 +149,13 @@
     <!-- ASAP -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
-              <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+            <h4>ASAP</h4>
+            <p><b>Location:</b> BA22 </p>
+              
+            <b>Email: </b>ASAP@lagcc.cuny.edu <br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/ASAP/ > ASAP </a></li>
               </ul>
               </p>
         </div>
@@ -172,15 +163,13 @@
     <!-- Health Service Center -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
-              <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+            <h4>Health Services Center</h4>
+            <p><b>Location:</b> MB40</p>   
+            <b>Phone: </b> 718-482-5280 <br>
+            <b>Email: </b>Health-Center@lagcc.cuny.edu<br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/healthservices/ > Health Services Center </a></li>
               </ul>
               </p>
         </div>
