commit new arjina
update information in new index

--- a/index.html
+++ b/index.html
@@ -177,15 +177,13 @@
     <!-- International Students services -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
-              <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+            <h4>Office of International Student Services</h4>
+            <p><b>Location:</b> B117</p>
+            <b>Phone: </b> 718-482-5145  <br>
+            <b>Email: </b>fsinformation@lagcc.cuny.edu<br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/Student-Services/International-Student/International-Students/ > Office of International Student Services </a></li>
               </ul>
               </p>
         </div>
@@ -193,15 +191,14 @@
     <!-- Advising Center -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
+            <h4>Advising Center</h4>
               <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+              Monday - Friday 9:00 a.m. – 5:00 p.m.<br>
+            <b>Phone: </b> (718) 482-5355 <br>
+            <b>Email: </b>aceadvisement@lagcc.cuny.edu<br>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= https://www.laguardia.edu/ce/pages/support-services/advisement-center/ > Advising Center </a></li>
               </ul>
               </p>
         </div>
@@ -209,15 +206,11 @@
     <!-- Veteran services resources. -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
-            <h4>Single Stop Program</h4>
-            <p><b>Location:</b> C107</p>
-              <p><b>Office Hours:</b><br>
-              Monday & Wednesday: 9 a.m.- 1 p.m.<br>
-            <b>Phone: </b> 718-482-5135 <br>
-            <b>Email: </b>singlestop@lagcc.cuny.edu<br>
+            <h4>Veteran Services Resource Center</h4>
+            <p><b>Location:</b> C371</p>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= https://www.laguardia.edu/singlestop/ > Single Stop Website </a></li>
+                <li><a href= veteransresourcecenter@lagcc.cuny.edu > Veteran Services Resource Center </a></li>
               </ul>
               </p>
         </div>
