--- a/collaborators.html
+++ b/collaborators.html
@@ -51,13 +51,27 @@
           <li> <h2>Arjina Khanom</h2> </li>
           <li> <h2>Thin Thazin</h2> </li>
           <li> <h2>Paul Alarcon</h2> </li>
-		      <li> <h2>Juhi Rahman</h2> </li>
+		    <li> <h2>Juhi Rahman</h2> </li>
+			<br>
+			<br>
+			  
+			  
         </ul>
         </div>
       </div>
     </div>
 
-
+      <br>
+	  <br>
+	  <br>
+	  <br>
+	  <pre>
+	  
+	  
+	  
+	  
+	  
+	  </pre>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
