--- a/index.html
+++ b/index.html
@@ -73,11 +73,31 @@
               </p>
         </div>
     </div>
+	<!---Libaray media lab-->
+	 <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>Library Media Resources Center</h4>
+            <p><b>Location:</b> E-201</p>
+			<P>Borrow calculator, iPad, laptop and reserve for study room. 
+            Loan period may varies depend on the devices. For more information check on the website or Media Lab desk.</P>
+              <p><b>Office Hours:</b><br>
+              Mon - Fri: 7:00 to 11:00<br>
+              Sat: 9:00 to 4:45<br>Sun: 9:00 to 4:45 <br>
+               <br>
+            <b>Phone: </b> (718) 482-5431 <br>
+            <p><b>Websites:</b>
+              <ul>
+                <li><a href= https://library.laguardia.edu/services/media/ > Library Media Resources Center </a></li>
+              </ul>
+              </p>
+        </div>
+    </div>
     <!-- Single Stop Program -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
             <h4>Single Stop Program</h4>
             <p><b>Location:</b> C107</p>
+			<P>Free, confidential, one-on-one services for Tax preparation, Health Care Enrollment, Legal and Financial Counseling and Food Pantry and assisting program like SNAP, TANF, WIC.</P>
               <p><b>Office Hours:</b><br>
               Monday & Wednesday: 9 a.m.- 1 p.m.<br>
             <b>Phone: </b> 718-482-5135 <br>
@@ -94,6 +114,7 @@
         <div class="card-block" style="padding: 20px;">
             <h4>Career Center</h4>
             <p><b>Location:</b> B114</p>
+			<P> Prepare for the resume, internship, mock interview and provides career advising. Free for student and alumni. For more information about job posting and on-campus job fair, check the Career Center website. </P>
               <p><b>Office Hours:</b><br>
               Mon & Thur 9:00 to 7:00<br>Tue, Wed & Fri 9:00 to 5:00  <br>
             <b>Phone: </b> 718-486-5235 <br>
@@ -110,6 +131,8 @@
         <div class="card-block" style="padding: 20px;">
             <h4>Student clubs and organization</h4>
             <p><b>Location:</b> M115</p>
+			<P> Provide a path to the students to participate in student clubs and organizations, leadership opportunities, civic engagement, and peer mentoring. Campus 
+			calendar provide the events happening on campus. For more information about joining student clubs or forming new clubs, check the Campus Life’s website.
               <p><b>Office Hours:</b><br>
               Monday–Thursday: 9 a.m.–7 p.m. <br>Friday: 9 a.m.–5 p.m.<br>
             <p><b>Websites:</b>
@@ -123,7 +146,12 @@
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
             <h4>Office of Student with Disabilities</h4>
-            <p><b>Location:</b> M102</p>   
+            <p><b>Location:</b> M102</p> 
+			<P> Providing the accommodations and services like Testing Accommodations, Note-Taking Assistance, 
+			Textbooks in Alternate Formats, Furniture and Room Accommodations, Assistive Technology, Hearing Accommodations 
+			and join LaGuardia Delta Alpha Pi International (DAPi) Honor Society which support and help student with disabilities
+			on their college journey. For more information about receiving accommodations and DAPi, check the office for student with disabilities’s website.</P>
+ 
             <b>Phone: </b> 718-482-5279<br>
             <b>Email: </b>OSD@lagcc.cuny.edu<br>
             <p><b>Websites:</b>
@@ -138,6 +166,8 @@
         <div class="card-block" style="padding: 20px;">
             <h4>CUNY Edge (AKA) COPE</h4>
             <p><b>Location:</b> MB13</p>
+			<P> Helping CUNY students who are receiving public assistance achieve academic excellence, graduate on time, and find employment. 
+			For more information about CUNY Edge, check the CUNY EDGE’s website.</P>
             <b>Phone: </b> 718-482-5479 <br> 
             <p><b>Websites:</b>
               <ul>
@@ -151,7 +181,9 @@
         <div class="card-block" style="padding: 20px;">
             <h4>ASAP</h4>
             <p><b>Location:</b> BA22 </p>
-              
+			<P>Provide a free monthly MetroCard, a voucher for textbooks, a waiver covering tuition and mandatory fees, a dedicated ASAP advisor to guide you to graduation, special class registration options for ASAP students.
+     For more information on application and requirement, check the ASAP’s website.</P>
+  
             <b>Email: </b>ASAP@lagcc.cuny.edu <br>
             <p><b>Websites:</b>
               <ul>
