--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <p><b>Location:</b> C371</p>
             <p><b>Websites:</b>
               <ul>
-                <li><a href= veteransresourcecenter@lagcc.cuny.edu > Veteran Services Resource Center </a></li>
+                <li><a href= https://www.laguardia.edu/veteranservices/> Veteran Services Resource Center </a></li>
               </ul>
               </p>
         </div>
