--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="card-block" style="padding: 20px;">
             <h4>e-Portfolio Labs</h4>
             <p><b>Location:</b> B121, B123, MB57, C447</p>
-            <p>These labs are technology labs where students can get e-Portfolio as well as all kinds of technology help. </p>
+            <p>These labs are technology labs where students can get help with e-Portfolio. </p>
             <p><b>Websites:</b>
               <ul>
                 <li><a href = https://www.laguardia.edu/Current-Students/ePortfolio-Studio/> ePortfolio Studio </a></li>
