--- a/schedule.html
+++ b/schedule.html
@@ -45,6 +45,7 @@
       <div class="container">
         <br><br>
         <div class="">
+		  <h1>SPRING 2019 LABS SCHEDULE <h1>
           <h2>B-121 SCHEDULE</h2>
         </div>
         <table class="table table-bordered table-hover">
