new commit-arjina
just added new information for tech help.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,70 @@
               </p>
         </div>
     </div>
+	    <!--Blackboard and CunyFirst -->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>Blackboard and CunyFirst Help</h4>
+            <p><b>Location:</b>B127</p>
+            <p><b>Email:</b>jcastro@lagcc.cuny.edu</p>
+			<p> You can get Blackboard and CunyFirst Help from here.</p>
+        </div>
+    </div>
+	    <!--Outlook/ office computer -->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>Outlook/ Office Computer</h4>
+            <p><b>Location:</b> B333A</p>
+            <p>This office is for Reset Password, Unable to log-in, General Outlook Problems.</p>
+        </div>
+    </div>
+	    <!-- WiFi Network/Internet Support -->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>Wi-Fi Network/Internet Support</h4>
+            <p><b>Location:</b>M419</p>
+            <p>This office is for Connection Issues.</p>
+        </div>
+    </div>
+	    <!--EKtron/ Website Support -->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>EKtron/ Website Support</h4>
+            <p><b>Location:</b>E506</p>
+			 <p><b>Email:</b>itwebteam@lagcc.cuny.edu</p>
+            <p>You can get help for EKtron/ Website Support and work with IT WEB Team. </p>
+        </div>
+    </div>
+	    <!--smart classroom support -->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>Smart Classroom Support</h4>
+            <p><b>Location:</b>M416</p>
+			<p><b>Email:</b>ismd@lagcc.cuny.edu</p>
+            <p>This lab is for Instructional Support Media Distribution. </p>   
+        </div>
+    </div>
+	    <!-- Computer Training -->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>Computer Training</h4>
+            <p><b>Location:</b>B333B</p>
+			<p><b>Email:</b>ismd@lagcc.cuny.edu</p>
+            <p><b>Websites:</b>
+              <ul>
+                <li><a href = http://www.laguardia.edu/ismd/faculty-staff/>Computer Training Website</a></li>
+              </ul>
+              </p>
+        </div>
+    </div>
+	    <!--ACE Support-->
+    <div class="card" style=" margin: 20px">
+        <div class="card-block" style="padding: 20px;">
+            <h4>ACE Support</h4>
+            <p><b>Location:</b>C916</p>
+            <p>This place is for ACE department help. </p>
+        </div>
+    </div>
     <!-- Financial Aid Office -->
     <div class="card" style=" margin: 20px">
         <div class="card-block" style="padding: 20px;">
