--- a/collaborators.html
+++ b/collaborators.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,63 +18,60 @@
     <title>Welcome! </title>
 
   </head>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:'#FFFFFF'" >
-    <a class="navbar-brand" href="https://www.laguardia.edu/stm/"><img style="width: 70px; height: 60px;" src="src/stm.png"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">OFICCES<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="schedule.html">EP LABS SCHEDULE</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="collaborators.html">COLLABORATORS</a>
-      </li>
-      </ul>
-  </div>
-  <a class="navbar-brand" href="https://www.laguardia.edu"><img style="width: 70px; height: 80px;" src="src/lagcc.png"></a>
-  </nav>
 
   <body>
-    <div class="container-fluid">
 
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="https://www.laguardia.edu/stm/">
+        <img width="70px" height="60px" src="src/stm.png">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">OFICCES<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="schedule.html">EP LABS SCHEDULE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="collaborators.html">COLLABORATORS</a>
+          </li>
+        </ul>
+      </div>
+
+      <form id="searchForm" autocomplete="off">
+        <input type="text" id="searchBox" placeholder="Enter search term[s]">
+        <input type="button" id="searchButton" value="Search">
+      </form>
+
+      <a class="navbar-brand" href="https://www.laguardia.edu">
+        <img width="70px" height="80px" src="src/lagcc.png">
+      </a>
+    </nav>
+
+    <!-- div class="container-fluid" -->
       <div class="container">
         <div class="collaborators-st"><br>
         <ul>
-          <li><h1 style="color:red;">Collaborators</h1></li><br>
+          <li><h1 class="redText">Collaborators</h1></li><br>
           <li> <h2>Breana Narine </h2> </li>
           <li> <h2>Arjina Khanom</h2> </li>
           <li> <h2>Thin Thazin</h2> </li>
           <li> <h2>Paul Alarcon</h2> </li>
-		    <li> <h2>Juhi Rahman</h2> </li>
-			<br>
-			<br>
-			  
-			  
+		  <li> <h2>Juhi Rahman</h2> </li>
+		  <li> <h2>Dave Kahn</h2> </li>
         </ul>
         </div>
       </div>
-    </div>
-
-      <br>
-	  <br>
-	  <br>
-	  <br>
-	  <pre>
-	  
-	  
-	  
-	  
-	  
-	  </pre>
+    <!-- /div -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <footer>LaGuardia STM Scavenger HUNT &copy; 2019</footer>
   </body>
-    <footer>LaGuardia STM Scavenger HUNT &copy 2019</footer>
 </html>
