--- a/schedule.html
+++ b/schedule.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,139 +18,154 @@
     <title>Welcome! </title>
 
   </head>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:'#FFFFFF'" >
-    <a class="navbar-brand" href="https://www.laguardia.edu/stm/"><img style="width: 70px; height: 60px;" src="src/stm.png"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">OFICCES<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="schedule.html">EP LABS SCHEDULE</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="collaborators.html">COLLABORATORS</a>
-      </li>
-      </ul>
-  </div>
-  <a class="navbar-brand" href="https://www.laguardia.edu"><img style="width: 70px; height: 80px;" src="src/lagcc.png"></a>
-  </nav>
 
   <body>
-    <div class="container-fluid">
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="https://www.laguardia.edu/stm/">
+        <img width="70px" height="60px" src="src/stm.png">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">OFICCES<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="schedule.html">EP LABS SCHEDULE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="collaborators.html">COLLABORATORS</a>
+          </li>
+        </ul>
+      </div>
+
+      <form id="searchForm" autocomplete="off">
+        <input type="text" id="searchBox" placeholder="Enter search term[s]">
+        <input type="button" id="searchButton" value="Search">
+      </form>
+
+      <a class="navbar-brand" href="https://www.laguardia.edu">
+        <img width="70px" height="80px" src="src/lagcc.png">
+      </a>
+    </nav>
+
+    <!-- div class="container-fluid" -->
       <div class="container">
         <br><br>
-        <div class="">
+        <!-- div class="" -->
+        <div>
 		  <h1>SPRING 2019 LABS SCHEDULE <h1>
           <h2>B-121 SCHEDULE</h2>
         </div>
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover schedules">
           <thead>
             <tr>
-              <th scope="col" style="text-align: center">TIME</th>
-              <th scope="col">MONDAY</th>
-              <th scope="col">TUESDAY</th>
-              <th scope="col">WEDNESDAY</th>
-              <th scope="col">THURSDAY</th>
-              <th scope="col">FRIDAY</th>
+              <th scope="colgroup">TIME</th>
+              <th scope="colgroup">MONDAY</th>
+              <th scope="colgroup">TUESDAY</th>
+              <th scope="colgroup">WEDNESDAY</th>
+              <th scope="colgroup">THURSDAY</th>
+              <th scope="colgroup">FRIDAY</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row" style="text-align: center">9:15-10:15</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <th scope="rowgroup">9:15-10:15</th>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">10:30-11:30</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <th scope="rowgroup">10:30-11:30</th>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">11:45-12:45</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <th scope="rowgroup">11:45-12:45</th>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="blueText">OPEN</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">1:00-2:00</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <th scope="rowgroup">1:00-2:00</th>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">2:15-3:15</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <th scope="rowgroup">2:15-3:15</th>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">3:25-4:25</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <th scope="rowgroup">3:25-4:25</th>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">4:35-5:35</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
+              <th scope="rowgroup">4:35-5:35</th>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
             </tr>
             <tr>
-              <th scope="row" style="text-align: center">5:45-6:45</th>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <th scope="rowgroup">5:45-6:45</th>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
             </tr>
 			 <tr>
-              <th scope="row" style="text-align: center">6:55-7:55</th>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="red">CLASS</font></td>
-              <td style="text-align: center"><font color="blue">OPEN</font></td>
+              <th scope="rowgroup">6:55-7:55</th>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="redText">CLASS</td>
+              <td class="blueText">OPEN</td>
             </tr>
           </tbody>
           </table>
           <br><br>
-          <div class="">
+          <!-- div class="" -->
+          <div>
             <h2>B-123 SCHEDULE</h2>
           </div>
-          <table class="table table-bordered table-hover">
+          <table class="table table-bordered table-hover schedules">
             <thead>
               <tr>
-                <th scope="col" style="text-align: center">TIME</th>
-                <th scope="col">MONDAY</th>
-                <th scope="col">TUESDAY</th>
-                <th scope="col">WEDNESDAY</th>
-                <th scope="col">THURSDAY</th>
-                <th scope="col">FRIDAY</th>
+                <th scope="colgroup">TIME</th>
+                <th scope="colgroup">MONDAY</th>
+                <th scope="colgroup">TUESDAY</th>
+                <th scope="colgroup">WEDNESDAY</th>
+                <th scope="colgroup">THURSDAY</th>
+                <th scope="colgroup">FRIDAY</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row" style="text-align: center">9:15-10:15</th>
+                <th scope="rowgroup">9:15-10:15</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -159,63 +173,63 @@
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" style="text-align: center">10:30-11:30</th>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <th scope="rowgroup">10:30-11:30</th>
+                <td class="redText">CLASS</td>
                 <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">11:45-12:45</th>
-                <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" style="text-align: center">1:00-2:00</th>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <th scope="rowgroup">11:45-12:45</th>
                 <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">2:15-3:15</th>
-                <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" style="text-align: center">3:25-4:25</th>
-                <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row" style="text-align: center">4:35-5:35</th>
-                <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
-                <td></td>
+                <th scope="rowgroup">1:00-2:00</th>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <th scope="row" style="text-align: center">5:45-6:45</th>
+                <th scope="rowgroup">2:15-3:15</th>
                 <td></td>
-                <td style="text-align: center"><font color="red">CLASS</font></td>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
+                <td class="redText">CLASS</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="rowgroup">3:25-4:25</th>
+                <td></td>
+                <td class="redText">CLASS</td>
+                <td></td>
+                <td class="redText">CLASS</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="rowgroup">4:35-5:35</th>
+                <td></td>
+                <td class="redText">CLASS</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="rowgroup">5:45-6:45</th>
+                <td></td>
+                <td class="redText">CLASS</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
 			  <tr>
-                <th scope="row" style="text-align: center">6:55-7:55</th>
+                <th scope="rowgroup">6:55-7:55</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -223,15 +237,14 @@
                 <td></td>
               </tr>
             </tbody>
-            </table>
+          </table>
 
-
-      </div>
-    </div>
+      </div> <!-- Container -->
+    <!-- /div --> <!-- Container-fluid -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <footer>LaGuardia STM Scavenger HUNT &copy; 2019</footer>
   </body>
-      <footer>LaGuardia STM Scavenger HUNT &copy 2019</footer>
 </html>
