--- a/schedule.html
+++ b/schedule.html
@@ -58,7 +58,7 @@
         <br><br>
         <!-- div class="" -->
         <div>
-		  <h1>SPRING 2020 LABS SCHEDULE <h1>
+		  <h1>Fall 2019 LABS SCHEDULE <h1>
           <h2>B-121 SCHEDULE</h2>
         </div>
         <table class="table table-bordered table-hover schedules">
